network-policy/np00-kube-system.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: np00-kube-system
  namespace: kube-system
spec:
  podSelector:
    matchLabels:
  ingress:
  # Allow all the coomunication comming from any namespace that have label namespace-network: net-system
  - from:
    - namespaceSelector:
        matchLabels:
          namespace-network: net-system
  # Allow all the communication between POD in the same namespaces
  - from:
    - podSelector: {}
  # Allow incomming DNS resolutions
  - ports:
    - port: 9153
      protocol: TCP
    from: []
  - ports:
    - port: 53
      protocol: TCP
    from: []
  - ports:
    - port: 53
      protocol: UDP
    from: []
