network-policy/np02-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np02-ingress
  namespace: ingress-nginx
spec:
  podSelector:
    matchLabels:
  ingress:
  # Allow all the coomunication comming from any namespace that have label namespace-network: net-system
  - from:
    - namespaceSelector:
        matchLabels:
          namespace-network: net-system
  # Allow all the communication between POD in the same namespaces
  - from:
    - podSelector: {}
  # Allow trafic from LBLs (Not applicable in Daemonset hostport)
#  - ports:
#    - port: 80
#      protocol: TCP
#    from:
#      - ipBlock:
#          cidr: 10.96.10.22/32
#      - ipBlock:
#          cidr: 10.96.10.23/32
#      - ipBlock:
#          cidr: 10.100.3.35/32
#      - ipBlock:
#          cidr: 10.100.3.35/32
#  - ports:
#    - port: 443
#      protocol: TCP
#    from:
#      - ipBlock:
#          cidr: 10.96.10.22/32
#      - ipBlock:
#          cidr: 10.96.10.23/32
#      - ipBlock:
#          cidr: 10.100.3.35/32
#      - ipBlock:
#          cidr: 10.100.3.35/32
