network-policy/np10-namespaced.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np10-namespaced-netpol
  namespace: $NAMESPACE
spec:
  podSelector:
    matchLabels:
  policyTypes:
  - Ingress
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
        except:
        # Protect K8S Network
        - {$K8S_NETWORK}/24
  ingress:
  # Allow all the coomunication comming from any namespace that have label namespace-network: net-system
  - from:
    - namespaceSelector:
        matchLabels:
          namespace-network: net-system
  # Allow all the communication between POD in the same namespaces
  - from:
    - podSelector: {}

  # If needed, allow trifc from some namespaces
#  - from:
#    - namespaceSelector:
#        matchLabels:
#          application: ns-net3
  # If needed, allow trafic from only one namespaces
#  - from:
#    - namespaceSelector:     # chooses all pods in namespaces labelled with team=operations
#        matchLabels:
#          application: myapp
#      podSelector:           # chooses pods with type=monitoring
#        matchLabels:
#          app: myapp-service
#    ports:
#    - protocol: TCP
#      port: 9443
#    - protocol: TCP
#      port: 9080
